Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24526

binlog rotate via FLUSH LOGS may obsolate binlog file for recovery too early

Details

    Description

      There's a race between FLUSH LOGS and binlog-group commit for Binlog-checkpoint notification which must be done *after* the committed group transactions' affected
      data are flushed to disk. However the notification may happen before that fore the reason
      FLUSH LOGS handler does to acquire necessary mutexes.

      A test case follows with a patch to be committed soon.

      Attachments

        Issue Links

          Activity

            People

              Elkin Andrei Elkin
              Elkin Andrei Elkin
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.